@@ -72,6 +72,7 @@ This file lists the incompatible changes between Version 2.x and older versions
   - bnrconductor_i is now obsolete, use bnrconductor_raw or bnrconductormod
   - bnrsurjection now returns [Matrix, cyc(F), cyc(f)] inste of Matrix
   - zetamultall prototype change: added flag
+  - remove obsolete function checkbnrgen: use bnr_get_gen(bnr)
 
 * Specific to the pthread interface
 ===================================
